--- a/clip.html
+++ b/clip.html
@@ -9,16 +9,13 @@
 </head>
     <header>
         <nav>
-            
             <a href="index.html">Home</a>
             <a href="clip.html">clip</a>
             <a class="logo" href="index.html">Homelogo</a>
             <a href="https://www.twitch.tv/kenthecoolguy">twitch</a>
             <a href="">Youtube</a>
-        
-
         </nav>
-        <h1>Home</h1>
+        <h1>clip</h1>
     </header>
     <section>
         <ul>
