--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="clip.html">clip</a>
             <a class="logo" href="index.html">Homelogo</a>
             <a href="https://www.twitch.tv/kenthecoolguy">twitch</a>
-            <a href="https://www.youtube.com">Youtube</a>
+            <a href="https://www.youtube.com/channel/UCHj6ebyECoMMV28aoebQ9Nw">Youtube</a>
         
 
         </nav>
