--- a/clip.html
+++ b/clip.html
@@ -13,7 +13,7 @@
             <a href="clip.html">clip</a>
             <a class="logo" href="index.html">Homelogo</a>
             <a href="https://www.twitch.tv/kenthecoolguy">twitch</a>
-            <a href="">Youtube</a>
+            <a href="https://www.youtube.com/channel/UCHj6ebyECoMMV28aoebQ9Nw">Youtube</a>
         </nav>
         <h1>clip</h1>
     </header>
