--- a/index.html
+++ b/index.html
@@ -9,22 +9,20 @@
 </head>
     <header>
         <nav>
-            
             <a href="index.html">Home</a>
             <a href="clip.html">clip</a>
             <a class="logo" href="index.html">Homelogo</a>
             <a href="https://www.twitch.tv/kenthecoolguy">twitch</a>
-            <a href="https://www.youtube.com/channel/UCHj6ebyECoMMV28aoebQ9Nw">Youtube</a>
-        
-
+            <a href="https://www.youtube.com/channel/UCHj6ebyECoMMV28aoebQ9Nw">Youtube</a><br>
+            <a class="mobile" href="index.html">Homelogo</a>
         </nav>
         <h1>Home</h1>
     </header>
     <section>
         <ul>
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
+            <iframe class="clip" src="https://clips.twitch.tv/embed?clip=ExquisiteGiantPeanutGrammarKing-OylHxHSQ_k1Uf8RS&parent=www.example.com" frameborder="0" allowfullscreen="true" scrolling="no" ></iframe>
+            <div class="clip">2</div>
+            <div class="clip">3</div>
         </ul>
     </section>
     <footer>footer</footer>
