--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>home</title>
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
+<body>
     <header>
         <nav>
             <a href="index.html">Home</a>
@@ -20,13 +21,12 @@
     </header>
     <section>
         <ul>
-            <iframe class="clip" src="https://clips.twitch.tv/embed?clip=ExquisiteGiantPeanutGrammarKing-OylHxHSQ_k1Uf8RS&parent=www.example.com" frameborder="0" allowfullscreen="true" scrolling="no" ></iframe>
-            <div class="clip">2</div>
-            <div class="clip">3</div>
+            <a class="clip1" href="https://www.twitch.tv/kenthecoolguy/clip/ExquisiteGiantPeanutGrammarKing-OylHxHSQ_k1Uf8RS"></a>
+            <a class="clip2" href="https://www.twitch.tv/kenthecoolguy/clip/HelpfulEntertainingSwanDancingBaby-hP07a4D1Kkg_K9UM"></a>
+            <a class="clip3" href="https://www.twitch.tv/kenthecoolguy/clip/TardyLittleBeefTwitchRPG-K4n5Cuvd_qFe5FQl"></a>
         </ul>
     </section>
     <footer>footer</footer>
-<body>
-    
 </body>
+
 </html>
