--- a/clip.html
+++ b/clip.html
@@ -4,28 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>clip</title>
+    <title>Clips</title>
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
+<body>
     <header>
         <nav>
             <a href="index.html">Home</a>
             <a href="clip.html">clip</a>
             <a class="logo" href="index.html">Homelogo</a>
             <a href="https://www.twitch.tv/kenthecoolguy">twitch</a>
-            <a href="https://www.youtube.com/channel/UCHj6ebyECoMMV28aoebQ9Nw">Youtube</a>
+            <a href="https://www.youtube.com/channel/UCHj6ebyECoMMV28aoebQ9Nw">Youtube</a><br>
+            <a class="mobile" href="index.html">Homelogo</a>
         </nav>
-        <h1>clip</h1>
+        <h1>Home</h1>
     </header>
     <section>
         <ul>
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
+            <a class="clip1" href="https://www.twitch.tv/kenthecoolguy/clip/ExquisiteGiantPeanutGrammarKing-OylHxHSQ_k1Uf8RS"></a>
+            <a class="clip2" href="https://www.twitch.tv/kenthecoolguy/clip/HelpfulEntertainingSwanDancingBaby-hP07a4D1Kkg_K9UM"></a>
+            <a class="clip3" href="https://www.twitch.tv/kenthecoolguy/clip/TardyLittleBeefTwitchRPG-K4n5Cuvd_qFe5FQl"></a>
         </ul>
     </section>
     <footer>footer</footer>
-<body>
-    
 </body>
+
 </html>
