--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    <header>
-        <nav>
+    <header class="upper"> 
+        <ul>
             <a href="index.html">Home</a>
             <a href="clip.html">clip</a>
             <a class="logo" href="index.html">Homelogo</a>
             <a href="https://www.twitch.tv/kenthecoolguy">twitch</a>
             <a href="https://www.youtube.com/channel/UCHj6ebyECoMMV28aoebQ9Nw">Youtube</a><br>
             <a class="mobile" href="index.html">Homelogo</a>
+        </ul>
+    </header>
+    <header class="lower">
+        <nav>
+            
         </nav>
         <h1>Home</h1>
     </header>
