--- a/clip.html
+++ b/clip.html
@@ -4,20 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clips</title>
+    <title>home</title>
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    <header>
-        <nav>
+    <header class="upper"> 
+        <ul>
             <a href="index.html">Home</a>
             <a href="clip.html">clip</a>
             <a class="logo" href="index.html">Homelogo</a>
             <a href="https://www.twitch.tv/kenthecoolguy">twitch</a>
             <a href="https://www.youtube.com/channel/UCHj6ebyECoMMV28aoebQ9Nw">Youtube</a><br>
             <a class="mobile" href="index.html">Homelogo</a>
+        </ul>
+    </header>
+    <header class="lower">
+        <nav>
+
         </nav>
-        <h1>Home</h1>
+        <h1>Clips</h1>
     </header>
     <section>
         <ul>
